[package]
name = "xcm-emulator-example"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Shaun Wang <spxwang@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.163", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false }
proc-macro2 = "1.0.40"

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

xcm-emulator = { path = "../" }
yayoi = { path = "../yayoi" }
