[package]
name = "yayoi"
description = "A simple runtime for cross-chain messages tests."
license = "Apache-2.0"
version = "0.1.0"
authors = ["Shaun Wang <spxwang@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.163", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }

cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v1.0.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v1.0.0" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v1.0.0" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v1.0.0" }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v1.0.0" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "polkadot-v1.0.0" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v1.0.0" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v1.0.0" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v1.0.0" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v1.0.0" }

[features]
default = ["std"]
no_std = []
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",

	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",

	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-parachain-system/std",
	"parachain-info/std",
	"cumulus-primitives-utility/std",

	"xcm/std",
	"xcm-executor/std",
	"polkadot-parachain/std",
	"xcm-builder/std",
	"pallet-xcm/std",
	"polkadot-runtime-parachains/std",
]
